# agentna

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/agentna/: __init__.py  __main__.py
src/agentna/analysis/: __init__.py  change_explainer.py  impact_analyzer.py  symbol_analyzer.py
src/agentna/cli/: __init__.py  main.py
src/agentna/core/: __init__.py  config.py  constants.py  exceptions.py  project.py
src/agentna/indexing/: __init__.py  indexer.py
src/agentna/indexing/parsers/: __init__.py  base.py  generic_parser.py  python_parser.py
src/agentna/llm/: __init__.py  base.py  claude_provider.py  ollama_provider.py  prompts.py  router.py
src/agentna/mcp/: __init__.py  server.py
src/agentna/memory/: __init__.py  embeddings.py  hybrid_store.py  knowledge_graph.py  models.py
src/agentna/tracking/: __init__.py  git_tracker.py  hooks.py  watcher.py
src/agentna/tui/: __init__.py  app.py
src/agentna/tui/screens/: __init__.py  changes.py  chat.py  dashboard.py
src/agentna/tui/widgets/: __init__.py
src/agentna/utils/: hashing.py
tests/: __init__.py
